# cdn-

./: Cargo.toml  README.md  dfx.json  package-lock.json  package.json
scripts/: smoke_list_files.js
src/cdn_app_backend/: Cargo.toml  cdn_app_backend.did  cdn_app_backend.did.new
src/cdn_app_backend/src/: auth.rs  config.rs  file_store.rs  lib.rs  main.rs  types.rs  utils.rs
src/cdn_app_backend/src/auth/: admin.rs  checks.rs  mod.rs  publisher.rs  roles.rs  viewer.rs
src/cdn_app_backend/src/errors/: error.rs  mod.rs
src/cdn_app_backend/src/file_store/: chunking.rs  metadata.rs  mod.rs  storage.rs
src/cdn_app_backend/src/ic/: mod.rs
src/cdn_app_backend/src/roles/: admin_ops.rs  mod.rs  publisher_ops.rs  viewer_ops.rs
src/cdn_app_backend/src/services/: file_service.rs  mod.rs
src/cdn_app_backend/src/tests/: edge_cases.rs  integration_tests.rs
src/cdn_app_backend/src/types/: error.rs  file.rs  mod.rs  user.rs
src/cdn_app_backend/src/utils/: hashing.rs  mod.rs  time.rs  validation.rs
src/cdn_app_frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json
src/cdn_app_frontend/src/: App.jsx  App.tsx  env.d.ts  styles.css
src/cdn_app_frontend/src/api/: actor.ts
src/cdn_app_frontend/src/components/: AdminPanel.tsx  FileManager.tsx
src/cdn_app_frontend/src/services/: actor.ts
