[package]
name = "cdn_app_backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.18.7"
ic-cdk-macros = "0.18.7"
candid = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_bytes = "0.11"
uuid = { version = "1.4", features = ["v4", "js"] }
sha2 = "0.10"
